Update email template

--- a/dividend_analyzer/email/email_html.html
+++ b/dividend_analyzer/email/email_html.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-  	<h1>Monthly Dividend Report</h1>
+  	<h1>Dividend Report</h1>
     <p>Showing changes in dividend rates and yields</p>
     {data}
   </body>
