Add color to table cells

--- a/dividend_analyzer/email/email_html.html
+++ b/dividend_analyzer/email/email_html.html
@@ -1,4 +1,23 @@
 <html>
+  <head>
+    <style type="text/css">
+      table {
+        border-collapse: collapse;
+      }
+
+      th {
+        background-color: aquamarine;
+        padding: 10px;
+        font-size: larger;
+      }
+
+      td {
+        background-color: bisque;
+        padding: 10px;
+        font-size: larger;
+      }
+    </style>
+  </head>
   <body>
   	<h1>Dividend Report</h1>
     <p>Showing changes in dividend rates and yields</p>
